# Kiln

.github/workflows/: build_desktop.yml
app/desktop/: build_desktop_app.sh  desktop.py
app/desktop/studio_server/: test_tool_api.py  tool_api.py
app/web_ui/src/lib/ui/: error_details_block.svelte
app/web_ui/src/lib/utils/: error_handlers.ts
app/web_ui/src/routes/(app)/settings/manage_tools/[project_id]/add_tools/local_mcp/: edit_local_tool.svelte
app/web_ui/src/routes/(app)/settings/manage_tools/[project_id]/add_tools/remote_mcp/: edit_remote_tool.svelte
app/web_ui/src/routes/(app)/settings/manage_tools/[project_id]/tool_servers/[tool_server_id]/: +page.svelte
libs/core/: pyproject.toml
libs/server/: pyproject.toml
