[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kiln-server"
version = "0.1.0"
description = 'Kiln AI Server'
readme = "README.md"
authors = [
  "Steve Cosman, Chesterfield Laboratories Inc <scosman@users.noreply.github.com>",
]
license = "Proprietary"
homepage = "https://getkiln.ai"
repository = "https://github.com/Kiln-AI/kiln"
documentation = "https://github.com/Kiln-AI/kiln#readme"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Kiln-AI/kiln/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
kiln-ai = {path = "../core"}
fastapi = "^0.115.4"
pydantic = "^2.9.2"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
isort = "^5.13.2"
ruff = "^0.7.1"
tomli = "^2.0.2"
tomlkit = "^0.13.2"
watchfiles = "^0.24.0"
pyright = "^1.1.387"
pytest-cov = "^6.0.0"
pdoc = "^15.0.0"
coverage = "^7.6.4"
uvicorn = "^0.32.0"
requests = "^2.32.3"

[tool.pyright]
reportMissingTypeArgument = true
strictListInference = true
